Fixing clear filters layout issue for safari

--- a/web/app/themes/r2/assets/styles/components/_filters.scss
+++ b/web/app/themes/r2/assets/styles/components/_filters.scss
@@ -209,6 +209,7 @@
 
     @include media-lg {
       left: 0;
+      right: auto;
       top: $beat * 4;
     }
   }
